Updated some attributes, translations updated.
Related to https://github.com/geoadmin/doc-bdms/issues/13

--- a/public/locale/common.json
+++ b/public/locale/common.json
@@ -34,7 +34,7 @@
   "casingId": "",
   "casingName": "",
   "centerselected": "",
-  "chro_str_top_bedrock": "",
+  "chronostratigraphy_top_bedrock": "",
   "city": "",
   "clickLayer": "",
   "close": "",
@@ -195,8 +195,8 @@
   "layerdepth": "",
   "layerdepthfrom": "",
   "layerdepthto": "",
-  "lit_pet_top_bedrock": "",
-  "lit_str_top_bedrock": "",
+  "lithology_top_bedrock": "",
+  "lithostratigraphy_top_bedrock": "",
   "load": "",
   "location": "",
   "location_x": "",
@@ -248,7 +248,7 @@
   "purpose": "",
   "qt_bore_inc_dir": "",
   "qt_elevation": "",
-  "qt_length": "",
+  "qt_depth": "",
   "qt_location": "",
   "qt_top_bedrock": "",
   "refElevationCasing": "",
