--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -2,89 +2,86 @@
   "version": "1.0.0",
   "add": "Add",
   "addInstrument": "Add instrument",
-  "address": "Address",
   "admin": "Administrator",
-  "afterdate": "After this date",
+  "afterdate": "after this date",
   "all": "all",
   "alls": "all",
-  "allSelected": "All boreholes selected",
+  "allSelected": "all boreholes selected",
   "andzoom": "...and zoom",
   "appearance": "Appearance",
-  "appearanceBigMap": "Big Map",
+  "appearanceBigMap": "Large Map",
   "appearanceFull": "Full",
   "appearanceListDetailsMap": "List | Details & Map",
   "appearanceListMapDetails": "List & Map | Details",
   "appearanceMapDetailsList": "Map | Details & List",
   "appearanceMapListDetails": "Map & List | Details",
   "attachments": "Attachments",
-  "author": "Autore",
-  "back_to_list": "back to list",
+  "back_to_list": "Go back to list",
   "background": "Background",
-  "beforedate": "Before this date",
+  "beforedate": "before this date",
   "borehole": "Borehole",
   "borehole_identifier": "Identifier",
   "borehole_identifier_value": "Code",
-  "boreholeidentifiers": "Borehole identifiers",
-  "boreholes": "boreholes",
-  "boreholestatus": "Status of borehole",
+  "boreholeidentifiers": "Borehole identifier",
+  "boreholes": "Boreholes",
+  "boreholestatus": "Borehole Status",
   "bulkEditing": "Bulk editing",
-  "cancel": "cancel",
+  "cancel": "Cancel",
   "canton": "Canton",
   "casing": "Casing",
-  "casingId": "ID",
-  "casingName": "Name of completion",
-  "centerselected": "Center to selected",
-  "chro_str_top_bedrock": "Chronostrati top bedrock",
-  "city": "City",
-  "clickLayer": "Click on a layer for details",
+  "casingId": "Casing ID",
+  "casingName": "Name of casing",
+  "centerselected": "center to selected",
+  "chronostratigraphy_top_bedrock": "Chronostratigraphy top bedrock",
+  "city": "City/Municipality",
+  "clickLayer": "Click on a layer for more details",
   "close": "Close",
-  "collapse": "collapse",
+  "collapse": "Collapse",
   "completion": "Completion",
   "confirm": "Confirm",
-  "copy": "Copy selected",
+  "copy": "Create a copy",
   "create": "Create",
-  "creationdate": "Creation date",
-  "creator": "Created by",
+  "createDate": "Creation date",
   "createdBy": "Created by",
+  "creationdate": "Creation date",
+  "csvFormat": "CSV format",
   "currentVersion": "Current version",
-  "importedBy": "Imported by",
-  "updatedBy": "Updated by",
-  "csvFormat": "Comma-Separated Values (CSV) format",
-  "cuttings": "Cuttings",
+  "cuttings": "Borehole cuttings/core",
   "date": "Date",
-  "dateSpudCasing": "Spud date",
-  "dateFinishCasing": "Finish date",
-  "dateAbandonmentCasing": "Date abandonment",
-  "degree": "degree",
+  "dateAbandonmentCasing": "Abandonment date",
+  "dateFinishCasing": "Completion finish date",
+  "dateSpudCasing": "Completion start date",
+  "degree": "Degrees",
   "delete": "Delete",
-  "deleteForever": "Delete forever",
-  "deletelayer": "Just delete this layer",
-  "deletelayerconfirmation": "You are about to delete this level, how do you want to procede?",
+  "deleteForever": "Delete permanently",
+  "deletelayer": "Delete this layer",
+  "deletelayerconfirmation": "You are about to delete this layer, how do you want to procede?",
   "deleting": "Deleting {{what}}",
-  "description": "Description",
+  "lithological_description": "Lithological Description",
   "details": "Details",
-  "disable": "disable",
-  "disabled": "disabled",
-  "disableWorkgroup": "disable workgroup",
+  "disable": "Disable",
+  "disabled": "Disabled",
+  "disableWorkgroup": "Disable workgroup",
   "disabling": "Disabling {{what}}",
   "done": "Done",
-  "draft": "draft",
-  "drilldiameter": "Drill diameter (mm)",
-  "drilling_date": "Drill end date",
-  "drillingmethod": "Drilling method",
+  "draft": "Draft",
+  "drill_diameter": "Drill diameter [mm]",
+  "drilling_end_date": "Drill end date",
+  "drilling_method": "Drilling method",
   "duplicate": "Duplicated value: assign a new value.",
   "editingEnabled": "Editing started",
   "editingStart": "Start editing",
   "editingStop": "Stop editing",
+  "elevation_z": "Terrain elevation [masl]",
   "elevationCasing": "Completion elevation",
-  "elevation_z": "Elevation (masl)",
-  "enable": "enable",
-  "enabled": "enabled",
-  "enableWorkgroup": "enable workgroup",
+  "enable": "Enable",
+  "enabled": "Enabled",
+  "enableWorkgroup": "Enable workgroup",
   "enabling": "Enabling {{what}}",
-  "english": "english",
+  "english": "English",
   "errorAttention": "Attention",
-  "errorGap": "Non continuos data found",
+  "errorEndPoint": "You should add end point",
+  "errorGap": "There is an undefined interval in the sequence",
   "errorGapSolution1": "Fill gap with \"undefined\" layer",
   "errorGapSolution2": "Replace upper layer base with top from lower layer",
   "errorGapSolution3": "Replace lower layer top with 0 meters",
@@ -98,13 +95,12 @@
   "errorMoreerror": "{{number}} errors found",
   "errorOneerror": "One error found",
   "errorOverlap": "Overlapping layers",
-  "errorEndPoint": "You should add end point",
   "errorStartEditing": "You should press start editing button",
-  "errrorStartPoint": "You should add start point",
   "errorStartWrong": "First layer not starting from the surface",
   "errorWrongDepth": "Wrong depth",
-  "errorWrongDepthSolution1": "Last layer depth ({{lDepth}}) not equals to total borehole depth {{bDepth}}. Manually change the Base MD field.",
-  "expand": "expand",
+  "errorWrongDepthSolution1": "End depth of last layer ({{lDepth}}) does not equal the borehole end depth {{bDepth}}.",
+  "errrorStartPoint": "You should add start point",
+  "expand": "Expand",
   "export": "Export",
   "exportInProgress": "Export in progress",
   "extendlower": "Extend lower layer to top",
@@ -117,114 +113,111 @@
   "flowPublication": "Publication workflow",
   "flowPublicationStatus": "Publication status",
   "flowRestart": "Restart the workflow",
-  "french": "french",
+  "french": "French",
   "from": "from",
+  "fromdepth": "from depth [m]",
+  "fromdiameter": "from diameter",
+  "fromelevation": "from elevation",
   "fromMeters": "from [m]",
-  "fromdepth": "from depth",
-  "fromdiameter": "From diameter",
-  "fromelevation": "From elevation",
-  "german": "german",
+  "german": "German",
   "groundwater": "Groundwater",
   "header_borehole": "Borehole editor",
   "header_check": "Pending",
   "header_editordesc": "Create or modify",
-  "header_explore": "Explore",
+  "header_explore": "Search",
   "header_hide_map": "Hide map",
   "header_language": "Language",
   "header_settingdesc": "Update your preferences",
   "header_settings": "Settings",
   "header_user_preferences": "User preferences",
-  "header_validation": "Publish",
+  "header_validation": "Validate",
   "header_view_preferences": "View",
   "header_viewerdesc": "Search and display",
   "hidden": "Hidden",
   "hideHistory": "Hide history",
-  "hrs": "HRS",
+  "hrs": "High reference system",
   "iagree": "I agree",
   "identifierManager": "Manage identifiers",
+  "importDate": "Import date",
+  "importedBy": "Imported by",
   "importedData": "Imported data",
   "inclination": "Inclination (°)",
-  "inclinationdirection": "Inclination direction (°)",
-  "instrument": "Instrumentation",
-  "instrumentId": "ID",
-  "invertedDepth": "Inverted depths",
+  "inclination_direction": "Inclination direction (°)",
   "inProgress": "in progress",
-  "italian": "italian",
-  "kind": "Drilling type",
+  "instrument": "Instrumentation",
+  "instrumentId": "Instrument ID",
+  "invertedDepth": "Inverted depths",
+  "italian": "Italian",
+  "kind": "Borehole type",
   "kindCasing": "Completion type",
   "kindCasingLayer": "Casing type",
   "kindFilling": "Type of backfill",
   "kindInstrument": "Type of instrument",
-  "landuse": "Land use",
-  "lastExport": "Here the last export",
-  "lastname": "Lastname",
+  "lastExport": "Herewith the last export",
+  "lastname": "Surname",
   "layer_alteration": "Alteration",
-  "layer_chronostratigraphy": "Chrono-stratigraphie",
+  "layer_chronostratigraphy": "Chronostratigraphy",
   "layer_cohesion": "Cohesion",
   "layer_color": "Color",
   "layer_compactness": "Compactness",
-  "layer_consistance": "Consistance",
+  "layer_consistance": "Consistancy",
   "layer_creation_fetch": "Preparing a new layer..",
   "layer_debris": "Debris",
-  "layer_depth": "Depth",
-  "layer_depth_from": "Top MD (m)",
-  "layer_depth_to": "Base MD (m)",
-  "layer_further_properties": "Further properties",
-  "layer_geology": "Geology description",
+  "facies_description": "Facies description",
   "layer_grain_granularity": "Grain angularity",
   "layer_grain_shape": "Grain shape",
   "layer_grain_size_1": "Grain size 1",
   "layer_grain_size_2": "Grain size 2",
   "layer_humidity": "Humidity",
   "layer_last": "End of borehole",
-  "layer_lit_pet_deb": "Litho/Petro debris",
-  "layer_lithology": "Lithology / Petrology",
-  "layer_lithostratigraphy": "Litho-stratigraphy",
+  "layer_lit_pet_deb": "Coarse component lithology",
+  "layer_lithology": "Lithology",
+  "layer_lithostratigraphy": "Lithostratigraphy",
   "layer_loading_fetch": "Loading an existing layer..",
   "layer_notes": "Notes",
   "layer_organic_component": "Organic components",
   "layer_plasticity": "Plasticity",
-  "layer_qt_description": "QC description",
-  "layer_striae": "Striae",
+  "layer_qt_description": "Quality description",
+  "layer_striae": "Striations",
   "layer_tectonic_unit": "Tectonic Unit",
   "layer_uscs_1": "USCS 1",
   "layer_uscs_2": "USCS 2",
   "layer_uscs_3": "USCS 3",
-  "layer_uscs_determination": "USCS determination",
-  "layer_uscs_original": "USCS original",
-  "layerdepth": "Depth",
-  "layerdepthfrom": "Top MD (m)",
-  "layerdepthto": "Base MD (m)",
-  "lit_pet_top_bedrock": "Lit/Pet Top bedrock",
-  "lit_str_top_bedrock": "Litstrati top bedrock",
+  "layer_uscs_determination": "USCS way of determination",
+  "layer_uscs_original": "USCS original classification",
+  "layer_depth": "Layer depth MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Base MD [m]",
+  "lithology_top_bedrock": "Lithology top bedrock",
+  "lithostratigraphy_top_bedrock": "Lithostratigraphy top bedrock",
   "load": "Load",
   "location": "Location",
   "location_x": "Coordinate East",
   "location_y": "Coordinate North",
-  "locked_at": "Locked at",
+  "locked_at": "Locked on",
   "locked_by": "Change in progress by",
   "locked_status": "Status",
   "loginScreen": "Login screen",
   "mainStratigraphy": "This is the main stratigraphy",
   "map": "Map",
-  "materialCasingLayer": "Material",
-  "materialFilling": "Material",
-  "meter": "meter",
+  "materialCasingLayer": "Casing material",
+  "materialFilling": "Backfill material",
+  "meter": "Meter",
   "msgCasingEmpty": "For a casing profile please click the plus symbol at the top left",
-  "msgDeleteUser": "The selected user can be deleted forever because currently there is not any trace of activity in the database.",
-  "msgDeleteWorkgroup": "The selected workgroup can be deleted forever because currently there are not any traces of activities in the database.",
-  "msgDeletingUserTip": "l'utente verrà eliminato dal database",
+  "msgDeleteUser": "The selected user can be deleted permanantly because currently there is no trace of activity in the database.",
+  "msgDeleteWorkgroup": "The selected workgroup can be permanantly deleted because currently there are no traces of activity in the database.",
+  "msgDeletingUserTip": "the user will be deleted from the database",
   "msgDeletingWorkgroupTip": "The workgroup will be permanently deleted from the database",
-  "msgDisablingUser": "The selected user can not be deleted because currently there are some traces of activities in the database.",
-  "msgDisablingWorkgroup": "The selected workgroup can not be deleted because currently there are some traces of activities in the database.",
+  "msgDisablingUser": "The selected user can not be deleted because currently there are some traces of activity in the database.",
+  "msgDisablingWorkgroup": "The selected workgroup can not be deleted because currently there are some traces of activity in the database.",
   "msgDisclaimer_publish_title": "Publish disclaimer",
   "msgEnablingUser": "You are going to re-enable the user \"{{user}}\". This user will be able to login and apply modifications based on its roles. ",
-  "msgEnablingWorkgroup": "You are going to reenable the \"{{workgroup}}\" workgroup. Users belonging to this workgroup will be able to apply again modifications based on theirs roles.",
-  "msgFillingEmpty": "No filling available",
-  "msgIdentifierAlreadyUsed": "Identifier already used",
-  "msgIdentifierDeletionAlreadyUsed": "Connot delete in use identifier",
-  "msgInstrumentsEmpty": "Instruments are associated with casings: no casings available",
-  "msgReenablingTip": "you will be able to re-enable it later.",
+  "msgEnablingWorkgroup": "You are going to reenable the workgroup \"{{workgroup}}\". Users belonging to this workgroup will be able to again apply modifications based on theirs roles.",
+  "msgFillingEmpty": "No casing available",
+  "msgIdentifierAlreadyUsed": "Identifier already in use",
+  "msgIdentifierDeletionAlreadyUsed": "Connot delete identifier in use",
+  "msgInstrumentsEmpty": "No instrumentation available",
+  "msgReenablingTip": "You will be able to re-enable it later.",
   "msgStartigraphyEmpty": "No stratigraphy available",
   "municipality": "Municipality",
   "name": "Name",
@@ -232,90 +225,99 @@
   "newBorehole": "New borehole",
   "no": "No",
   "noComments": "No comments",
-  "nothingToShow": "Nothing to show",
+  "nothingToShow": "Nothing to display",
   "np": "Unknown",
   "oneSelected": "One borehole selected",
   "original_name": "Original name",
   "overlay": "Maps displayed",
   "password": "Password",
-  "preview": "preview",
+  "preview": "Preview",
   "previousVersions": "Previous versions",
   "project_name": "Project name",
   "public": "Public",
-  "public_name": "Public name",
+  "alternate_name": "Alternate name",
   "publication": "Publication",
-  "publish": "publish",
+  "publish": "Publish",
   "purpose": "Purpose",
-  "qt_bore_inc_dir": "QC Inclin. / Direction",
-  "qt_elevation": "CQ Elevation Z",
-  "qt_length": "QC depth",
-  "qt_location": "CQ Coordinates",
-  "qt_top_bedrock": "QC top bedrock",
-  "refElevationCasing": "Reference elevation",
-  "refresh": "refresh",
+  "qt_bore_inc_dir": "Inclin. / direction precission",
+  "qt_elevation": "+/- Elevation top terrain [m]",
+  "qt_depth": "+/- Total depth MD [m]",
+  "qt_location": "+/- Coordinates [m]",
+  "qt_top_bedrock": "+/- Top bedrock MD [m]",
+  "refresh": "Refresh",
   "reject": "Reject",
   "rejected": "Rejected",
   "remarks": "Remarks",
-  "reset": "reset",
+  "reset": "Reset",
   "resources": "Resources",
   "restriction": "Restriction",
-  "restriction_until": "Restriction date",
-  "result": "result",
-  "results": "results",
-  "role": "role",
-  "roles": "roles",
-  "save": "save",
-  "saving": "saving",
-  "search": "search",
+  "restriction_until": "Restriction end date",
+  "result": "Result",
+  "results": "Results",
+  "role": "Role",
+  "roles": "Roles",
+  "save": "Save",
+  "saving": "Saving",
+  "search": "Search",
   "searchfilters": "Search filters",
-  "searchFiltersBoreholes": "Borehole's filters",
-  "searchFiltersLayers": "Stratigraphy layers search filters",
+  "searchFiltersBoreholes": "Borehole filters",
+  "searchFiltersLayers": "Stratigraphy layer(s) filters",
   "setmanually": "Set manually",
   "show": "show {{what}}",
   "showAll": "Show all",
-  "showallfields": "show all fields",
+  "showallfields": "Show all fields",
   "showHistory": "Show history",
   "someSelected": "{{howMany}} boreholes selected",
-  "srs": "SRS",
+  "srs": "Spatial reference system",
   "start": "This page is in English.",
-  "status": "status",
+  "status": "Status",
   "statuscomplete": "Completed",
   "statuscontrol": "Scientific check",
-  "statusInstrument": "Status of the instrument",
   "statusedit": "Change in progress",
+  "statusInstrument": "Instrument status",
   "statuspublic": "Publish",
-  "statusvalid": "Validation",
+  "statusvalid": "Validated",
   "stratigraphy": "Stratigraphy",
   "stratigraphy_name": "Name / Version",
-  "stratigraphyfields": "Stratigraphy form fields",
+  "stratigraphyfields": "Stratigraphy fields",
   "submit": "Submit",
   "submitted": "Submitted",
+  "supplier": "Supplier",
   "sure": "Are you sure?",
   "terms": "Terms of service",
   "title": "BMS",
+  "todepth": "to depth MD [m]",
+  "todiameter": "to diameter",
+  "toelevation": "to elevation",
   "toMeters": "to [m]",
-  "todepth": "to depth",
-  "todiameter": "To diameter",
-  "toelevation": "To elevation",
-  "top_bedrock": "Top bedrock (m)",
-  "totaldepth": "Total depth (m)",
+  "top_bedrock": "Top bedrock MD [m]",
+  "totaldepth": "Total depth MD [m]",
   "type": "Type",
   "updateDate": "Update date",
-  "createDate": "Creation date",
-  "importDate": "Import date",
+  "updatedBy": "Updated by",
   "upload": "Upload",
   "uploaded": "Uploaded",
-  "uploadFile": "Select the CSV file to upload",
+  "uploadFile": "Select a CSV file to upload",
   "uploadNewFile": "Upload a new file",
-  "user": "user",
+  "user": "User",
   "username": "Username",
-  "usersMap": "User's maps",
+  "usersMap": "Maps for users",
   "viewas": "View as",
   "visibility": "Visibility",
   "visible": "Visible",
   "workgroup": "workgroup",
-  "supplier": "Supplier",
   "yes": "Yes",
-  "you": "you",
-  "yourcomments": "Your comments"
+  "you": "You",
+  "yourcomments": "Your comments",
+  "spud_date": "Spud date",
+  "total_depth_tvd": "Total Depth TVD [m]",
+  "total_depth_tvd_qt": "+/- Total depth TVD [m]",
+  "reference_elevation": "Reference elevation [masl]",
+  "reference_elevation_type": "Reference elevation type",
+  "reference_elevation_qt": "+/- Reference Elevation [m]",
+  "casing_inner_diameter": "Casing inner diameter [mm]",
+  "casing_outer_diameter": "Casing outer diameter [mm]",
+  "gradation": "Gradation",
+  "top_bedrock_tvd": "Top bedrock TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Top bedrock TVD [m]"
 }
