--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -2,12 +2,11 @@
   "version": "1.0.0",
   "add": "Hinzufügen",
   "addInstrument": "Instrument hinzufügen",
-  "address": "Addresse",
   "admin": "Administrator",
   "afterdate": "von Datum",
   "all": "alle",
   "alls": "alle",
-  "allSelected": "Alle Bohrungen ausgewählt",
+  "allSelected": "alle Bohrungen ausgewählt",
   "andzoom": "...und zoomen",
   "appearance": "Erscheinungsbild",
   "appearanceBigMap": "Große Karte",
@@ -17,51 +16,48 @@
   "appearanceMapDetailsList": "Karte | Details & Liste ",
   "appearanceMapListDetails": "Karte & Liste | Details",
   "attachments": "Anhänge",
-  "author": "Autor",
   "back_to_list": "Zurück zur Liste",
   "background": "Hintergrund",
   "beforedate": "bis Datum",
   "borehole": "Bohrung",
-  "borehole_identifier": "Kennung",
+  "borehole_identifier": "Identifikator",
   "borehole_identifier_value": "Code",
-  "boreholeidentifiers": "Bohrungskennung",
+  "boreholeidentifiers": "Bohrungsidentifikator",
   "boreholes": "Bohrungen",
-  "boreholestatus": "Status Bohrloch",
-  "bulkEditing": "Bulk-Editing",
+  "boreholestatus": "Bohrungs Status",
+  "bulkEditing": "Mehrfachbearbeitung",
   "cancel": "Abbrechen",
   "canton": "Kanton",
   "casing": "Verrohrung",
-  "casingId": "ID",
+  "casingId": "Verrohrungs ID",
   "casingName": "Name der Verrohrung",
-  "centerselected": "Auf Auswahl zentrieren",
-  "chro_str_top_bedrock": "Chronostrati Top Fels",
-  "city": "Gemeinde",
-  "clickLayer": "Klicken Sie für Informationen",
-  "close": "Schlissen",
-  "collapse": "Zuklappen",
+  "centerselected": "auf Auswahl zentrieren",
+  "chronostratigraphy_top_bedrock": "Chronostratigraphie Top Fels",
+  "city": "Stadt /Gemeinde",
+  "clickLayer": "Klicken Sie für mehr Informationen",
+  "close": "Schliessen",
+  "collapse": "Minimieren",
   "completion": "Ausbau",
   "confirm": "Bestätigen",
   "copy": "Kopie erstellen",
   "create": "Erstellen",
-  "creationdate": "Erstellungsdatum",
-  "creator": "Erstellt von",
+  "createDate": "Erstellungsdatum",
   "createdBy": "Erstellt von",
+  "creationdate": "Erstellungsdatum",
+  "csvFormat": "Dateiformat CSV",
   "currentVersion": "Aktuelle Version",
-  "importedBy": "Importiert von",
-  "updatedBy": "Aktualisiert durch",
-  "csvFormat": "Dateiformat (.csv)",
-  "cuttings": "Schnitt",
+  "cuttings": "Bohrgut",
   "date": "Datum",
-  "dateSpudCasing": "Bohrbeginn",
-  "dateFinishCasing": "Ausbau Ende",
-  "dateAbandonmentCasing": "Stillegung",
+  "dateAbandonmentCasing": "Stillegung Datum",
+  "dateFinishCasing": "Ausbau Ende Datum",
+  "dateSpudCasing": "Ausbau Beginn Datum",
   "degree": "Grad",
   "delete": "Löschen",
   "deleteForever": "Dauerhaft löschen",
   "deletelayer": "Bestehende Schicht löschen",
   "deletelayerconfirmation": "Sie löschen diese Schicht. Wie wollen Sie fortfahren?",
   "deleting": "{{what}} löschen",
-  "description": "Beschreibung",
+  "lithological_description": "Lithologische Beschreibung",
   "details": "Einzelheiten",
   "disable": "Deaktivieren",
   "disabled": "Deaktiviert",
@@ -69,22 +65,23 @@
   "disabling": "{{what}} deaktivieren",
   "done": "Ok",
   "draft": "Entwurf",
-  "drilldiameter": "Bohrdurchmesser (mm)",
-  "drilling_date": "Bohrende Datum",
-  "drillingmethod": "Bohrmethode",
+  "drill_diameter": "Bohrdurchmesser [mm]",
+  "drilling_end_date": "Bohrende Datum",
+  "drilling_method": "Bohrmethode",
   "duplicate": "Doppelter Wert: neuen Wert setzen.",
   "editingEnabled": "Die Bearbeitung hat begonnen",
   "editingStart": "Bearbeitung beginnen",
   "editingStop": "Bearbeitung beenden",
+  "elevation_z": "Ansatzhöhe OKT [m.ü.M.]",
   "elevationCasing": "Ansatzhöhe Verrohrung",
-  "elevation_z": "Ansatzhöhe (müM)",
   "enable": "Aktivieren",
   "enabled": "Aktiviert",
   "enableWorkgroup": "Arbeitsgruppe aktivieren",
   "enabling": "{{what}} aktivieren",
-  "english": "english",
+  "english": "English",
   "errorAttention": "Achtung",
-  "errorGap": "Schichttiefen sind nicht kontinuierlich",
+  "errorEndPoint": "Sie sollten den Endpunkt hinzufügen",
+  "errorGap": "Es gibt eine Lücke im Schichtverzeichnis",
   "errorGapSolution1": "Lücke mit \"nicht definierter Schicht\" füllen",
   "errorGapSolution2": "Basis der oberen Schicht mit Top der unteren Schicht ersetzen",
   "errorGapSolution3": "Top der unteren Schicht mit o Metern ersetzen",
@@ -98,12 +95,11 @@
   "errorMoreerror": "{{number}} Fehler gefunden",
   "errorOneerror": "Ein Fehler gefunden",
   "errorOverlap": "Überlappende Schichten",
-  "errorEndPoint": "Sie sollten den Endpunkt hinzufügen",
   "errorStartEditing": "Sie sollten die Schaltfläche \"Bearbeitung beginnen\" drücken",
-  "errrorStartPoint": "Sie sollten den Startpunkt hinzufügen",
   "errorStartWrong": "Erste Schicht beginnt nicht an der Geländeoberfläche",
   "errorWrongDepth": "Falsche Endtiefe",
-  "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein. Ändern Sie das Feld Basis-MD manuell.",
+  "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein.",
+  "errrorStartPoint": "Sie sollten den Startpunkt hinzufügen",
   "expand": "Aufklappen",
   "export": "Exportieren",
   "exportInProgress": "Export in Bearbeitung",
@@ -116,18 +112,18 @@
   "firstname": "Vorname",
   "flowPublication": "Publikations-Workflow",
   "flowPublicationStatus": "Status der Veröffentlichung",
-  "flowRestart": "Neustart des Flusses",
-  "french": "französisch",
+  "flowRestart": "Neustart des Arbeitsablaufs",
+  "french": "Französisch",
   "from": "von",
-  "fromMeters": "von [m]",
-  "fromdepth": "von Tiefe",
+  "fromdepth": "von Tiefe [m]",
   "fromdiameter": "von Durchmesser",
-  "fromelevation": "von Hohe",
-  "german": "deutsch",
+  "fromelevation": "von Höhe",
+  "fromMeters": "von [m]",
+  "german": "Deutsch",
   "groundwater": "Grundwasser",
   "header_borehole": "Bohrloch Editor",
   "header_check": "In Bearbeitung",
-  "header_editordesc": "Erstellen und ändern",
+  "header_editordesc": "Erstellen oder ändern",
   "header_explore": "Durchsuchen",
   "header_hide_map": "Karte ausblenden",
   "header_language": "Sprache",
@@ -138,25 +134,26 @@
   "header_view_preferences": "Ansicht",
   "header_viewerdesc": "Suchen und anzeigen",
   "hidden": "Versteckt",
-  "hideHistory": "Geschichte ausblenden",
-  "hrs": "HRS",
+  "hideHistory": "Verlauf ausblenden",
+  "hrs": "Höhenreferenzsystem",
   "iagree": "Ich stimme zu",
   "identifierManager": "Kennung verwalten",
+  "importDate": "Importdatum",
+  "importedBy": "Importiert von",
   "importedData": "Importierte Daten",
   "inclination": "Inklination (°)",
-  "inclinationdirection": "Einfallsrichtung (°)",
-  "instrument": "Instrumentierung",
-  "instrumentId": "ID",
-  "invertedDepth": "Umgekehrte Tiefen",
+  "inclination_direction": "Einfallsrichtung (°)",
   "inProgress": "in Bearbeitung",
-  "italian": "italienisch",
+  "instrument": "Instrumentierung",
+  "instrumentId": "Instrument ID",
+  "invertedDepth": "Umgekehrte Tiefen",
+  "italian": "Italienisch",
   "kind": "Bohrtyp",
   "kindCasing": "Ausbautyp",
   "kindCasingLayer": "Rohrtyp",
   "kindFilling": "Hinterfüllungstyp",
   "kindInstrument": "Instrumentierungstyp",
-  "landuse": "Landnutzung",
-  "lastExport": "Hier ist die letzte Export",
+  "lastExport": "Hier ist der letzte Export",
   "lastname": "Nachname",
   "layer_alteration": "Alteration",
   "layer_chronostratigraphy": "Chronostratigrafie",
@@ -166,49 +163,45 @@
   "layer_consistance": "Konsistenz",
   "layer_creation_fetch": "Bereite neue Schicht vor..",
   "layer_debris": "Grobbestandteile",
-  "layer_depth": "Bohrendtiefe",
-  "layer_depth_from": "Top MD (m)",
-  "layer_depth_to": "Basis MD (m)",
-  "layer_further_properties": "Weitere Eigenschaften",
-  "layer_geology": "Geologische Beschreibung",
+  "facies_description": "Fazielle Beschreibung",
   "layer_grain_granularity": "Kornrundung",
   "layer_grain_shape": "Kornform",
   "layer_grain_size_1": "Korngrösse 1",
   "layer_grain_size_2": "Korngrösse 2",
   "layer_humidity": "Feuchtigkeit",
   "layer_last": "Bohrlochende",
-  "layer_lit_pet_deb": "Litho/Petro Grobbestandteile",
-  "layer_lithology": "Lithologie / Petrologie",
-  "layer_lithostratigraphy": "Lithostratigrafie",
+  "layer_lit_pet_deb": "Lithologie Grobbestandteile",
+  "layer_lithology": "Lithologie",
+  "layer_lithostratigraphy": "Lithostratigraphie",
   "layer_loading_fetch": "Lade Schicht..",
   "layer_notes": "Anmerkungen",
   "layer_organic_component": "Organische Komponenten",
   "layer_plasticity": "Plastizität",
-  "layer_qt_description": "QC Beschreibung",
+  "layer_qt_description": "Qualität Beschreibung",
   "layer_striae": "Striemung",
   "layer_tectonic_unit": "Tektonische Einheit",
   "layer_uscs_1": "USCS 1",
   "layer_uscs_2": "USCS 2",
   "layer_uscs_3": "USCS 3",
-  "layer_uscs_determination": "USCS Bestimmung",
-  "layer_uscs_original": "USCS Original",
-  "layerdepth": "Bohrendtiefe",
-  "layerdepthfrom": "Top MD (m)",
-  "layerdepthto": "Basis MD (m)",
-  "lit_pet_top_bedrock": "Lit/Pet Top Fels",
-  "lit_str_top_bedrock": "Litstrati Top Fels",
+  "layer_uscs_determination": "USCS Bestimmungmethode",
+  "layer_uscs_original": "USCS Originalklassification",
+  "layer_depth": "Schichttiefe MD [m]",
+  "layer_depth_from": "Top MD [m]",
+  "layer_depth_to": "Basis MD [m]",
+  "lithology_top_bedrock": "Lithologie Top Fels",
+  "lithostratigraphy_top_bedrock": "Lithostratigraphie Top Fels",
   "load": "Laden",
   "location": "Standort",
-  "location_x": "Koordinate O",
-  "location_y": "Koordinate N",
+  "location_x": "Koordinate Ost",
+  "location_y": "Koordinate Nord",
   "locked_at": "Gesperrt am",
   "locked_by": "Änderung in Bearbeitung von",
   "locked_status": "Status",
   "loginScreen": "Login-Bildschirm",
   "mainStratigraphy": "Dies ist die Hauptstratigraphie",
   "map": "Karte",
-  "materialCasingLayer": "Material",
-  "materialFilling": "Material",
+  "materialCasingLayer": "Verrohrungsmaterial",
+  "materialFilling": "Hinerfüllungsmaterial",
   "meter": "Meter",
   "msgCasingEmpty": "Für ein Verrohrungsprofil bitte das Plus-Symbol oben rechts klicken",
   "msgDeleteUser": "Der ausgewählte Benutzer kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
@@ -220,10 +213,10 @@
   "msgDisclaimer_publish_title": "Haftungsausschluss veröffentlichen",
   "msgEnablingUser": "Der Benutzer \"{{user}}\" wird wieder aktiviert. Dieser Benutzer kann sich dann wieder anmelden und Änderungen basierend auf seinen Rollen vornehmen.",
   "msgEnablingWorkgroup": "Die Arbeitsgruppe \"{{workgroup}}\" wird wieder aktiviert. Benutzer, die zu dieser Arbeitsgruppe gehören, können Änderungen basierend auf ihren Rollen vornehmen.",
-  "msgFillingEmpty": "Kein Rohr verfügbar",
-  "msgIdentifierAlreadyUsed": "Identifikator bereits vergeben.",
-  "msgIdentifierDeletionAlreadyUsed": "Identifikator kann nicht im Gebrauch gelöscht werden",
-  "msgInstrumentsEmpty": "Instrumente sind mit Rohren verbunden: keine Rohre verfügbar",
+  "msgFillingEmpty": "Keine Hinterfüllung verfügbar",
+  "msgIdentifierAlreadyUsed": "Identifikator bereits vergeben",
+  "msgIdentifierDeletionAlreadyUsed": "Identifikator wird genutzt und kann daher nicht gelöscht werden",
+  "msgInstrumentsEmpty": "Kein Instrument verfügbar",
   "msgReenablingTip": "Sie können ihn später wieder aktivieren.",
   "msgStartigraphyEmpty": "Keine Stratigraphie verfügbar",
   "municipality": "Gemeinde",
@@ -242,16 +235,15 @@
   "previousVersions": "Frühere Versionen",
   "project_name": "Projektname",
   "public": "Öffentlich",
-  "public_name": "Öffentlicher Name",
+  "alternate_name": "Alternativer Name",
   "publication": "Veröffentlichung",
   "publish": "Veröffentlichen",
   "purpose": "Bohrzweck",
-  "qt_bore_inc_dir": "QC Inc. / Richtung",
-  "qt_elevation": "QC Ansatz Z",
-  "qt_length": "QC Tiefe",
-  "qt_location": "CQ Koordinaten",
-  "qt_top_bedrock": "QC Top Fels",
-  "refElevationCasing": "Referenz Ansatzhöhe",
+  "qt_bore_inc_dir": " Inc. / Richtung Genauigkeit",
+  "qt_elevation": "+/- Ansatzhöhe OKT [m]",
+  "qt_depth": "+/- Endteufe MD [m]",
+  "qt_location": "+/- Koordinaten [m]",
+  "qt_top_bedrock": "+/- Top Fels MD [m]",
   "refresh": "Aktualisieren",
   "reject": "Ablehnen",
   "rejected": "Abgelehnt",
@@ -259,7 +251,7 @@
   "reset": "Zurücksetzen",
   "resources": "Dokumentation",
   "restriction": "Beschränkung",
-  "restriction_until": "Datum Beschränkung",
+  "restriction_until": "Datum Ende der Beschränkung",
   "result": "Ergebnis",
   "results": "Ergebnisse",
   "role": "Rolle",
@@ -268,41 +260,41 @@
   "saving": "Speichern",
   "search": "Suchen",
   "searchfilters": "Suchfilter",
-  "searchFiltersBoreholes": "Suchfilter von borehole",
+  "searchFiltersBoreholes": "Suchfilter Bohrungen",
   "searchFiltersLayers": "Stratigraphie-Schicht filter",
   "setmanually": "Manuell einstellen",
   "show": "{{what}} anzeigen",
   "showAll": "Alle anzeigen",
   "showallfields": "Alle Felder anzeigen",
-  "showHistory": "Geschichte anzeigen",
+  "showHistory": "Verlauf anzeigen",
   "someSelected": "{{howMany}} Bohrungen ausgewählt",
-  "srs": "SRS",
+  "srs": "Räumliches Bezugssystem",
   "start": "Diese Seite ist auf Deutsch.",
-  "status": "status",
-  "statuscomplete": "fertiggestellt",
-  "statuscontrol": "wissenschaftlich geprüft",
-  "statusInstrument": "Status des Geräts",
+  "status": "Status",
+  "statuscomplete": "Fertiggestellt",
+  "statuscontrol": "Wissenschaftlich geprüft",
   "statusedit": "in Bearbeitung",
-  "statuspublic": "veröffentlicht",
-  "statusvalid": "validiert",
-  "stratigraphy": "Stratigrafie",
+  "statusInstrument": "Status des Geräts",
+  "statuspublic": "Veröffentlicht",
+  "statusvalid": "Validiert",
+  "stratigraphy": "Stratigraphie",
   "stratigraphy_name": "Name / Version",
   "stratigraphyfields": "Stratigraphiefelder",
   "submit": "Weiterleiten",
-  "submitted": "Vorgelegt",
+  "submitted": "Eingereicht",
+  "supplier": "Anbieter",
   "sure": "Sind Sie sicher?",
   "terms": "Nutzungsbedingungen",
   "title": "BDMS",
-  "toMeters": "bis [m]",
-  "todepth": "bis Tiefe",
+  "todepth": "bis Tiefe MD [m]",
   "todiameter": "bis Durchmesser",
-  "toelevation": "bis Hohe",
-  "top_bedrock": "Top Fels (m)",
-  "totaldepth": "Gesamttiefe (m)",
+  "toelevation": "bis Höhe",
+  "toMeters": "bis [m]",
+  "top_bedrock": "Top Fels MD [m]",
+  "totaldepth": "Bohrendteufe MD [m]",
   "type": "Typ",
   "updateDate": "Bearbeitungsdatum",
-  "createDate": "Erstellungsdatum",
-  "importDate": "Importdatum",
+  "updatedBy": "Aktualisiert durch",
   "upload": "Hochladen",
   "uploaded": "Hochgeladen",
   "uploadFile": "Wählen Sie eine Datei (*.csv) aus",
@@ -311,11 +303,21 @@
   "username": "Benutzername",
   "usersMap": "Karten für Benutzer",
   "viewas": "Ansicht als",
-  "visibility": "Visibilität",
+  "visibility": "Sichtbar",
   "visible": "Sichtbar",
   "workgroup": "Arbeitsgruppe",
-  "supplier": "Anbieter",
   "yes": "Ja",
   "you": "Du",
-  "yourcomments": "Ihre Kommentare"
+  "yourcomments": "Ihre Kommentare",
+  "spud_date": "Bohrbeginn",
+  "total_depth_tvd": "Endteufe TVD [m]",
+  "total_depth_tvd_qt": "+/- Endteufe TVD [m]",
+  "reference_elevation": "Referenz Ansatzhöhe [m.ü.M.]",
+  "reference_elevation_type": "Referenz Ansatzhöhe Typ",
+  "reference_elevation_qt": "+/- Referenz Ansatzhöhe [m]",
+  "casing_inner_diameter": "Verrohrung Innendurchmesser [mm]",
+  "casing_outer_diameter": "Verrohrung Aussendurchmesser [mm]",
+  "gradation": "Abstufung",
+  "top_bedrock_tvd": "Top Fels TVD [m]",
+  "top_bedrock_tvd_qt": "+/- Top Fels TVD [m]"
 }
