--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -238,7 +238,7 @@
   "alternate_name": "Nome alternativo",
   "publication": "Pubblicazione",
   "publish": "Pubblicare",
-  "purpose": "Scopo",
+  "purpose": "Scopo della perforazione",
   "qt_bore_inc_dir": "Qualità inclinazione / direzione",
   "qt_elevation": "+/- quota livello del terreno [m]",
   "qt_depth": "+/- quota della profondità MD [m]",
