--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -57,7 +57,7 @@
   "deletelayer": "Delete this layer",
   "deletelayerconfirmation": "You are about to delete this layer, how do you want to procede?",
   "deleting": "Deleting {{what}}",
-  "lithological_description": "Lithological Description",
+  "lithological_description": "Lithological description",
   "details": "Details",
   "disable": "Disable",
   "disabled": "Disabled",
