Fix: lit pet layer translation attribute

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -170,7 +170,7 @@
   "layer_grain_size_2": "Korngrösse 2",
   "layer_humidity": "Feuchtigkeit",
   "layer_last": "Bohrlochende",
-  "layer_lit_pet_deb": "Lithologie Grobbestandteile",
+  "layer_lithology_top_bedrock": "Lithologie Grobbestandteile",
   "layer_lithology": "Lithologie",
   "layer_lithostratigraphy": "Lithostratigraphie",
   "layer_loading_fetch": "Lade Schicht..",
