--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -170,7 +170,7 @@
   "layer_grain_size_2": "Granulométrie 2",
   "layer_humidity": "Humidité",
   "layer_last": "Terminaison du forage",
-  "layer_lit_pet_deb": "Lithologie des débris grossiers",
+  "layer_lithology_top_bedrock": "Lithologie des débris grossiers",
   "layer_lithology": "Lithologie",
   "layer_lithostratigraphy": "Lithostratigraphie",
   "layer_loading_fetch": "La couche est en cours de chargement..",
