--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -170,7 +170,7 @@
   "layer_grain_size_2": "Granulometria 2",
   "layer_humidity": "Umidità",
   "layer_last": "Fine della perforazione",
-  "layer_lit_pet_deb": "Litologia dei detriti grossolani",
+  "layer_lithology_top_bedrock": "Litologia dei detriti grossolani",
   "layer_lithology": "Litologia",
   "layer_lithostratigraphy": "Litostratigrafia",
   "layer_loading_fetch": "Caricamento strati in corso..",
